update pom.xml,upload frontjs